--- a/404.md
+++ b/404.md
@@ -18,7 +18,7 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <div style="text-align:center"><img src ="./assets/img/404.png" style="width: 300px;" /></div>
+  <p><strong>Página no encontrada</strong></p>
 </div>
+
